// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`VenuesMap VenueClusterRenderer should match with snapshot for venue cluster tooltip 1`] = `
<stories__StyledListWithIcon>
  <ListWithIcon
    data={
      Array [
        Object {
          "icon": <AntdIcon
            component={
              Object {
                "$$typeof": Symbol(react.forward_ref),
                "attrs": Array [],
                "componentStyle": e {
                  "baseHash": -1386770054,
                  "baseStyle": undefined,
                  "componentId": "styledComponents__VenueInfoMarkerGreenIcon-sc-mzsngu-7",
                  "isStatic": false,
                  "rules": Array [
                    "
  height: 20px;
  width: 32px;
  vertical-align: text-bottom;
  fill: var(--acx-neutrals-50);
",
                  ],
                  "staticRulesId": "",
                },
                "foldedComponentIds": Array [],
                "render": [Function],
                "shouldForwardProp": undefined,
                "styledComponentId": "styledComponents__VenueInfoMarkerGreenIcon-sc-mzsngu-7",
                "target": Object {
                  "$$typeof": Symbol(react.forward_ref),
                  "render": [Function],
                },
                "toString": [Function],
                "warnTooManyClasses": [Function],
                "withComponent": [Function],
              }
            }
          />,
          "popoverContent": <VenueMarkerTooltip
            venue={
              Object {
                "apStat": Array [
                  Object {
                    "category": "APs",
                    "series": Array [
                      Object {
                        "name": "1 Requires Attention",
                        "value": 0,
                      },
                      Object {
                        "name": "2 Transient Issue",
                        "value": 0,
                      },
                      Object {
                        "name": "3 In Setup Phase",
                        "value": 0,
                      },
                      Object {
                        "name": "4 Operational",
                        "value": 1,
                      },
                    ],
                  },
                ],
                "apsCount": 50,
                "clientsCount": 20,
                "name": "someVenueName",
                "status": "2_Operational",
                "switchClientsCount": 10,
                "switchStat": Array [
                  Object {
                    "category": "Switches",
                    "series": Array [
                      Object {
                        "name": "1 Requires Attention",
                        "value": 0,
                      },
                      Object {
                        "name": "2 Transient Issue",
                        "value": 0,
                      },
                      Object {
                        "name": "3 In Setup Phase",
                        "value": 0,
                      },
                      Object {
                        "name": "4 Operational",
                        "value": 1,
                      },
                    ],
                  },
                ],
                "switchesCount": 2,
                "venueId": "someVenueId",
              }
            }
          />,
          "title": "someVenueName",
        },
      ]
    }
    footer={<div />}
    header={
      <div
        className="venueInfoHeader"
      >
        <span
          style={
            Object {
              "fontWeight": "bolder",
            }
          }
        >
          1
           Venues
        </span>
        <span
          onClick={[Function]}
          style={
            Object {
              "cursor": "pointer",
              "float": "right",
            }
          }
        >
          <ForwardRef(CloseOutlined) />
        </span>
      </div>
    }
    isPaginate={true}
    pageSize={3}
  />
</stories__StyledListWithIcon>
`;

exports[`VenuesMap VenueClusterRenderer should test getVenueInfoMarkerIcon method 1`] = `
Array [
  Object {
    "$$typeof": Symbol(react.forward_ref),
    "attrs": Array [],
    "componentStyle": e {
      "baseHash": 1081410407,
      "baseStyle": undefined,
      "componentId": "styledComponents__VenueInfoMarkerGreyIcon-sc-mzsngu-8",
      "isStatic": false,
      "rules": Array [
        "
  height: 20px;
  width: 32px;
  vertical-align: text-bottom;
  fill: var(--acx-neutrals-50);
",
      ],
      "staticRulesId": "",
    },
    "foldedComponentIds": Array [],
    "render": [Function],
    "shouldForwardProp": undefined,
    "styledComponentId": "styledComponents__VenueInfoMarkerGreyIcon-sc-mzsngu-8",
    "target": Object {
      "$$typeof": Symbol(react.forward_ref),
      "render": [Function],
    },
    "toString": [Function],
    "warnTooManyClasses": [Function],
    "withComponent": [Function],
  },
  Object {
    "$$typeof": Symbol(react.forward_ref),
    "attrs": Array [],
    "componentStyle": e {
      "baseHash": 163195716,
      "baseStyle": undefined,
      "componentId": "styledComponents__VenueInfoMarkerRedIcon-sc-mzsngu-10",
      "isStatic": false,
      "rules": Array [
        "
  height: 20px;
  width: 32px;
  vertical-align: text-bottom;
  fill: var(--acx-neutrals-50);
",
      ],
      "staticRulesId": "",
    },
    "foldedComponentIds": Array [],
    "render": [Function],
    "shouldForwardProp": undefined,
    "styledComponentId": "styledComponents__VenueInfoMarkerRedIcon-sc-mzsngu-10",
    "target": Object {
      "$$typeof": Symbol(react.forward_ref),
      "render": [Function],
    },
    "toString": [Function],
    "warnTooManyClasses": [Function],
    "withComponent": [Function],
  },
  Object {
    "$$typeof": Symbol(react.forward_ref),
    "attrs": Array [],
    "componentStyle": e {
      "baseHash": -1386770054,
      "baseStyle": undefined,
      "componentId": "styledComponents__VenueInfoMarkerGreenIcon-sc-mzsngu-7",
      "isStatic": false,
      "rules": Array [
        "
  height: 20px;
  width: 32px;
  vertical-align: text-bottom;
  fill: var(--acx-neutrals-50);
",
      ],
      "staticRulesId": "",
    },
    "foldedComponentIds": Array [],
    "render": [Function],
    "shouldForwardProp": undefined,
    "styledComponentId": "styledComponents__VenueInfoMarkerGreenIcon-sc-mzsngu-7",
    "target": Object {
      "$$typeof": Symbol(react.forward_ref),
      "render": [Function],
    },
    "toString": [Function],
    "warnTooManyClasses": [Function],
    "withComponent": [Function],
  },
  Object {
    "$$typeof": Symbol(react.forward_ref),
    "attrs": Array [],
    "componentStyle": e {
      "baseHash": -347520609,
      "baseStyle": undefined,
      "componentId": "styledComponents__VenueInfoMarkerOrangeIcon-sc-mzsngu-9",
      "isStatic": false,
      "rules": Array [
        "
  height: 20px;
  width: 32px;
  vertical-align: text-bottom;
  fill: var(--acx-neutrals-50);
",
      ],
      "staticRulesId": "",
    },
    "foldedComponentIds": Array [],
    "render": [Function],
    "shouldForwardProp": undefined,
    "styledComponentId": "styledComponents__VenueInfoMarkerOrangeIcon-sc-mzsngu-9",
    "target": Object {
      "$$typeof": Symbol(react.forward_ref),
      "render": [Function],
    },
    "toString": [Function],
    "warnTooManyClasses": [Function],
    "withComponent": [Function],
  },
  Object {
    "$$typeof": Symbol(react.forward_ref),
    "attrs": Array [],
    "componentStyle": e {
      "baseHash": -347520609,
      "baseStyle": undefined,
      "componentId": "styledComponents__VenueInfoMarkerOrangeIcon-sc-mzsngu-9",
      "isStatic": false,
      "rules": Array [
        "
  height: 20px;
  width: 32px;
  vertical-align: text-bottom;
  fill: var(--acx-neutrals-50);
",
      ],
      "staticRulesId": "",
    },
    "foldedComponentIds": Array [],
    "render": [Function],
    "shouldForwardProp": undefined,
    "styledComponentId": "styledComponents__VenueInfoMarkerOrangeIcon-sc-mzsngu-9",
    "target": Object {
      "$$typeof": Symbol(react.forward_ref),
      "render": [Function],
    },
    "toString": [Function],
    "warnTooManyClasses": [Function],
    "withComponent": [Function],
  },
]
`;

exports[`VenuesMap VenueClusterRenderer should test getVenueInfoMarkerIcon method for unknown status 1`] = `
Object {
  "$$typeof": Symbol(react.forward_ref),
  "attrs": Array [],
  "componentStyle": e {
    "baseHash": 1081410407,
    "baseStyle": undefined,
    "componentId": "styledComponents__VenueInfoMarkerGreyIcon-sc-mzsngu-8",
    "isStatic": false,
    "rules": Array [
      "
  height: 20px;
  width: 32px;
  vertical-align: text-bottom;
  fill: var(--acx-neutrals-50);
",
    ],
    "staticRulesId": "",
  },
  "foldedComponentIds": Array [],
  "render": [Function],
  "shouldForwardProp": undefined,
  "styledComponentId": "styledComponents__VenueInfoMarkerGreyIcon-sc-mzsngu-8",
  "target": Object {
    "$$typeof": Symbol(react.forward_ref),
    "render": [Function],
  },
  "toString": [Function],
  "warnTooManyClasses": [Function],
  "withComponent": [Function],
}
`;
